Bug 334144 - Handling of alpha bits in nsBMPDecoder don't make sense in Cairo terms p=Alfred Kayser <alfredkayser@nl.ibm.com> r=pavlov/sr=tor